# stm32-doom-loader

./: .gitignore  README.md
app/: CMakeLists.txt  STM32F401RETX_APP.ld
app/Inc/: ili9341.h  spi.h  uart.h
app/Src/: ili9341.c  ili9341.h.c  main.c  spi.c  uart.c
app/Startup/: startup_stm32f401.s
bootloader/: CMakeLists.txt  STM32F401RETX_FLASH.ld  compile_flags.txt  toolchain.cmake
bootloader/Inc/: crc32.h
bootloader/Src/: crc32.c  main.c
tools/: append_crc.py
